cluster/manifests/snapshot-controller/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: snapshot-controller
  labels:
    name: snapshot-controller
    pod-security.kubernetes.io/enforce: restricted
