cluster/manifests/snapshot-controller/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: snapshot-controller
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: snapshot-controller
      app.kubernetes.io/component: ""
  mtls:
    mode: STRICT
