cluster/manifests/snapshot-controller/overlays/dev/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: snapshot-controller
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: snapshot-controller
      app.kubernetes.io/component: ""
  outboundTrafficPolicy:
    mode: ALLOW_ANY # Snapshot requests to external
  egress:
    - captureMode: DEFAULT
      hosts:
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
        - default/kubernetes.default.svc.cluster.local
        - default/etcd.default.svc.cluster.local
